backend/app/parser/nginx/backend/grammar/nginxParser.py
# Generated from ./backend/grammar/nginx.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class nginxParser ( Parser ):

    grammarFileName = "nginx.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'http'", "'server'", "'upstream'", "'location'", "'if'", 
                     "'include'", "'limit_except'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'GET'", "'HEAD'", "'POST'", 
                     "'PUT'", "'DELETE'", "'MKCOL'", "'COPY'", "'MOVE'", 
                     "'OPTIONS'", "'PROPFIND'", "'PROPPATCH'", "'LOCK'", 
                     "'UNLOCK'", "'PATCH'", "'on'", "'off'", "'=='", "'!='", 
                     "'~'", "'!~'", "'~*'", "'!~*'", "'-f'", "'!-f'", "'-d'", 
                     "'!-d'", "'-x'", "'!-x'", "'('", "')'", "'{'", "'}'", 
                     "';'", "','", "'#'", "'/'", "'*'", "'$'", "'.'", "'-'", 
                     "'_'", "'`'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'\\t'", "<INVALID>", "' '" ]

    symbolicNames = [ "<INVALID>", "COMMENT", "LUA_CODE", "WS", "HTTP", 
                      "SERVER", "UPSTREAM", "LOCATION", "IF", "INCLUDE", 
                      "LIMIT_EXCEPT", "LUA_BY_REWRITE", "LUA_BY_ACCESS", 
                      "LUA_BY_CONTENT", "LUA_BY_HEADER_FILTER", "LUA_BY_BODY_FILTER", 
                      "LUA_BY_LOG", "LUA_BY_BALANCER", "LUA_BY_INIT", "LUA_BY_INIT_WORKER", 
                      "LUA_BY_EXIT_WORKER", "LUA_BY_EXIT_MASTER", "LUA_BY_SSL_CERT", 
                      "LUA_BY_SSL_CLIENT_HELLO", "LUA_BY_SHARED_DICT", "LUA_START", 
                      "LUA_END", "GET", "HEAD", "POST", "PUT", "DELETE", 
                      "MKCOL", "COPY", "MOVE", "OPTIONS", "PROPFIND", "PROPPATCH", 
                      "LOCK", "UNLOCK", "PATCH", "ON", "OFF", "EQUAL", "NOT_EQUAL", 
                      "REGEXP_START", "REGEXP_START_NOT", "REGEXP_START_CASE", 
                      "REGEXP_START_CASE_NOT", "FILE_EXIST", "FILE_NOT_EXIST", 
                      "FILE_DIR_EXIST", "FILE_DIR_NOT_EXIST", "FILE_EXE_EXIST", 
                      "FILE_EXE_NOT_EXIST", "LPAREN", "RPAREN", "LBRACE", 
                      "RBRACE", "SEMI", "COMMA", "HASH", "RSLASH", "ASTERISK", 
                      "DOLLAR", "POINT", "MINUS", "UNDERSCORE", "TILDE", 
                      "WORD", "INTEGER", "SINGLE_STRING", "DOUBLE_STRING", 
                      "ANY_CHAR", "TAB", "EOL", "SPACE" ]

    RULE_config = 0
    RULE_directive = 1
    RULE_http = 2
    RULE_server = 3
    RULE_upstream = 4
    RULE_location = 5
    RULE_limit_except = 6
    RULE_if_stmt = 7
    RULE_include = 8
    RULE_lua_code = 9
    RULE_parameter = 10
    RULE_http_method = 11
    RULE_if_cond = 12
    RULE_if_body = 13
    RULE_if_param = 14
    RULE_if_compare = 15
    RULE_if_regexp = 16
    RULE_if_function = 17
    RULE_if_str = 18
    RULE_upstream_servers = 19
    RULE_location_match = 20
    RULE_name = 21
    RULE_value = 22
    RULE_on = 23
    RULE_off = 24
    RULE_path = 25
    RULE_path_component = 26
    RULE_http_name = 27
    RULE_server_name = 28
    RULE_upstream_name = 29
    RULE_location_name = 30
    RULE_if_name = 31
    RULE_include_name = 32
    RULE_limit_except_name = 33
    RULE_lua_code_name = 34

    ruleNames =  [ "config", "directive", "http", "server", "upstream", 
                   "location", "limit_except", "if_stmt", "include", "lua_code", 
                   "parameter", "http_method", "if_cond", "if_body", "if_param", 
                   "if_compare", "if_regexp", "if_function", "if_str", "upstream_servers", 
                   "location_match", "name", "value", "on", "off", "path", 
                   "path_component", "http_name", "server_name", "upstream_name", 
                   "location_name", "if_name", "include_name", "limit_except_name", 
                   "lua_code_name" ]

    EOF = Token.EOF
    COMMENT=1
    LUA_CODE=2
    WS=3
    HTTP=4
    SERVER=5
    UPSTREAM=6
    LOCATION=7
    IF=8
    INCLUDE=9
    LIMIT_EXCEPT=10
    LUA_BY_REWRITE=11
    LUA_BY_ACCESS=12
    LUA_BY_CONTENT=13
    LUA_BY_HEADER_FILTER=14
    LUA_BY_BODY_FILTER=15
    LUA_BY_LOG=16
    LUA_BY_BALANCER=17
    LUA_BY_INIT=18
    LUA_BY_INIT_WORKER=19
    LUA_BY_EXIT_WORKER=20
    LUA_BY_EXIT_MASTER=21
    LUA_BY_SSL_CERT=22
    LUA_BY_SSL_CLIENT_HELLO=23
    LUA_BY_SHARED_DICT=24
    LUA_START=25
    LUA_END=26
    GET=27
    HEAD=28
    POST=29
    PUT=30
    DELETE=31
    MKCOL=32
    COPY=33
    MOVE=34
    OPTIONS=35
    PROPFIND=36
    PROPPATCH=37
    LOCK=38
    UNLOCK=39
    PATCH=40
    ON=41
    OFF=42
    EQUAL=43
    NOT_EQUAL=44
    REGEXP_START=45
    REGEXP_START_NOT=46
    REGEXP_START_CASE=47
    REGEXP_START_CASE_NOT=48
    FILE_EXIST=49
    FILE_NOT_EXIST=50
    FILE_DIR_EXIST=51
    FILE_DIR_NOT_EXIST=52
    FILE_EXE_EXIST=53
    FILE_EXE_NOT_EXIST=54
    LPAREN=55
    RPAREN=56
    LBRACE=57
    RBRACE=58
    SEMI=59
    COMMA=60
    HASH=61
    RSLASH=62
    ASTERISK=63
    DOLLAR=64
    POINT=65
    MINUS=66
    UNDERSCORE=67
    TILDE=68
    WORD=69
    INTEGER=70
    SINGLE_STRING=71
    DOUBLE_STRING=72
    ANY_CHAR=73
    TAB=74
    EOL=75
    SPACE=76

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ConfigContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(nginxParser.EOF, 0)

        def directive(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nginxParser.DirectiveContext)
            else:
                return self.getTypedRuleContext(nginxParser.DirectiveContext,i)


        def LBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(nginxParser.LBRACE)
            else:
                return self.getToken(nginxParser.LBRACE, i)

        def RBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(nginxParser.RBRACE)
            else:
                return self.getToken(nginxParser.RBRACE, i)

        def getRuleIndex(self):
            return nginxParser.RULE_config

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConfig" ):
                listener.enterConfig(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConfig" ):
                listener.exitConfig(self)




    def config(self):

        localctx = nginxParser.ConfigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_config)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 432345564261122032) != 0):
                self.state = 73
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24]:
                    self.state = 70
                    self.directive()
                    pass
                elif token in [57]:
                    self.state = 71
                    self.match(nginxParser.LBRACE)
                    pass
                elif token in [58]:
                    self.state = 72
                    self.match(nginxParser.RBRACE)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            self.match(nginxParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def http(self):
            return self.getTypedRuleContext(nginxParser.HttpContext,0)


        def server(self):
            return self.getTypedRuleContext(nginxParser.ServerContext,0)


        def upstream(self):
            return self.getTypedRuleContext(nginxParser.UpstreamContext,0)


        def location(self):
            return self.getTypedRuleContext(nginxParser.LocationContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(nginxParser.If_stmtContext,0)


        def limit_except(self):
            return self.getTypedRuleContext(nginxParser.Limit_exceptContext,0)


        def include(self):
            return self.getTypedRuleContext(nginxParser.IncludeContext,0)


        def lua_code(self):
            return self.getTypedRuleContext(nginxParser.Lua_codeContext,0)


        def getRuleIndex(self):
            return nginxParser.RULE_directive

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDirective" ):
                listener.enterDirective(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDirective" ):
                listener.exitDirective(self)




    def directive(self):

        localctx = nginxParser.DirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_directive)
        try:
            self.state = 92
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 5, 6, 7, 8, 10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [4]:
                    self.state = 80
                    self.http()
                    pass
                elif token in [5]:
                    self.state = 81
                    self.server()
                    pass
                elif token in [6]:
                    self.state = 82
                    self.upstream()
                    pass
                elif token in [7]:
                    self.state = 83
                    self.location()
                    pass
                elif token in [8]:
                    self.state = 84
                    self.if_stmt()
                    pass
                elif token in [10]:
                    self.state = 85
                    self.limit_except()
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            elif token in [9, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24]:
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [9]:
                    self.state = 88
                    self.include()
                    pass
                elif token in [11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24]:
                    self.state = 89
                    self.lua_code()
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HttpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def http_name(self):
            return self.getTypedRuleContext(nginxParser.Http_nameContext,0)


        def LBRACE(self):
            return self.getToken(nginxParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(nginxParser.RBRACE, 0)

        def directive(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nginxParser.DirectiveContext)
            else:
                return self.getTypedRuleContext(nginxParser.DirectiveContext,i)


        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nginxParser.ParameterContext)
            else:
                return self.getTypedRuleContext(nginxParser.ParameterContext,i)


        def getRuleIndex(self):
            return nginxParser.RULE_http

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHttp" ):
                listener.enterHttp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHttp" ):
                listener.exitHttp(self)




    def http(self):

        localctx = nginxParser.HttpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_http)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.http_name()
            self.state = 95
            self.match(nginxParser.LBRACE)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & -4611158252812501008) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 511) != 0):
                self.state = 98
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24]:
                    self.state = 96
                    self.directive()
                    pass
                elif token in [45, 46, 47, 48, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72]:
                    self.state = 97
                    self.parameter()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 103
            self.match(nginxParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ServerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def server_name(self):
            return self.getTypedRuleContext(nginxParser.Server_nameContext,0)


        def LBRACE(self):
            return self.getToken(nginxParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(nginxParser.RBRACE, 0)

        def directive(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nginxParser.DirectiveContext)
            else:
                return self.getTypedRuleContext(nginxParser.DirectiveContext,i)


        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nginxParser.ParameterContext)
            else:
                return self.getTypedRuleContext(nginxParser.ParameterContext,i)


        def getRuleIndex(self):
            return nginxParser.RULE_server

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterServer" ):
                listener.enterServer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitServer" ):
                listener.exitServer(self)




    def server(self):

        localctx = nginxParser.ServerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_server)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.server_name()
            self.state = 106
            self.match(nginxParser.LBRACE)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & -4611158252812501008) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 511) != 0):
                self.state = 109
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24]:
                    self.state = 107
                    self.directive()
                    pass
                elif token in [45, 46, 47, 48, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72]:
                    self.state = 108
                    self.parameter()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 114
            self.match(nginxParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UpstreamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def upstream_name(self):
            return self.getTypedRuleContext(nginxParser.Upstream_nameContext,0)


        def upstream_servers(self):
            return self.getTypedRuleContext(nginxParser.Upstream_serversContext,0)


        def LBRACE(self):
            return self.getToken(nginxParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(nginxParser.RBRACE, 0)

        def directive(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nginxParser.DirectiveContext)
            else:
                return self.getTypedRuleContext(nginxParser.DirectiveContext,i)


        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nginxParser.ParameterContext)
            else:
                return self.getTypedRuleContext(nginxParser.ParameterContext,i)


        def getRuleIndex(self):
            return nginxParser.RULE_upstream

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUpstream" ):
                listener.enterUpstream(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUpstream" ):
                listener.exitUpstream(self)




    def upstream(self):

        localctx = nginxParser.UpstreamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_upstream)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.upstream_name()
            self.state = 117
            self.upstream_servers()
            self.state = 118
            self.match(nginxParser.LBRACE)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & -4611158252812501008) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 511) != 0):
                self.state = 121
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24]:
                    self.state = 119
                    self.directive()
                    pass
                elif token in [45, 46, 47, 48, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72]:
                    self.state = 120
                    self.parameter()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 126
            self.match(nginxParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LocationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def location_name(self):
            return self.getTypedRuleContext(nginxParser.Location_nameContext,0)


        def LBRACE(self):
            return self.getToken(nginxParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(nginxParser.RBRACE, 0)

        def location_match(self):
            return self.getTypedRuleContext(nginxParser.Location_matchContext,0)


        def directive(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nginxParser.DirectiveContext)
            else:
                return self.getTypedRuleContext(nginxParser.DirectiveContext,i)


        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nginxParser.ParameterContext)
            else:
                return self.getTypedRuleContext(nginxParser.ParameterContext,i)


        def getRuleIndex(self):
            return nginxParser.RULE_location

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLocation" ):
                listener.enterLocation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLocation" ):
                listener.exitLocation(self)




    def location(self):

        localctx = nginxParser.LocationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_location)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.location_name()
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 129
                self.location_match()


            self.state = 132
            self.match(nginxParser.LBRACE)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & -4611158252812501008) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 511) != 0):
                self.state = 135
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24]:
                    self.state = 133
                    self.directive()
                    pass
                elif token in [45, 46, 47, 48, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72]:
                    self.state = 134
                    self.parameter()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 140
            self.match(nginxParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Limit_exceptContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def limit_except_name(self):
            return self.getTypedRuleContext(nginxParser.Limit_except_nameContext,0)


        def http_method(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nginxParser.Http_methodContext)
            else:
                return self.getTypedRuleContext(nginxParser.Http_methodContext,i)


        def LBRACE(self):
            return self.getToken(nginxParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(nginxParser.RBRACE, 0)

        def directive(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nginxParser.DirectiveContext)
            else:
                return self.getTypedRuleContext(nginxParser.DirectiveContext,i)


        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nginxParser.ParameterContext)
            else:
                return self.getTypedRuleContext(nginxParser.ParameterContext,i)


        def getRuleIndex(self):
            return nginxParser.RULE_limit_except

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLimit_except" ):
                listener.enterLimit_except(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLimit_except" ):
                listener.exitLimit_except(self)




    def limit_except(self):
